// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component Snapshots matches snapshot with right component 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 60,
      "marginBottom": 24,
      "marginTop": 32,
      "paddingHorizontal": 8,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 40,
        "justifyContent": "center",
        "opacity": 1,
        "width": 40,
      }
    }
  >
    <Ionicons
      color="#000"
      name="chevron-back"
      size={24}
    />
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "flex": 1,
        "fontFamily": "MontserratBold",
        "fontSize": 24,
        "fontWeight": "bold",
        "textAlign": "center",
      }
    }
  >
    Header with Action
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "width": 40,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text>
        Action
      </Text>
    </View>
  </View>
</View>
`;

exports[`Header Component Snapshots matches snapshot with title only 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 60,
      "marginBottom": 24,
      "marginTop": 32,
      "paddingHorizontal": 8,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 40,
        "justifyContent": "center",
        "opacity": 1,
        "width": 40,
      }
    }
  >
    <Ionicons
      color="#000"
      name="chevron-back"
      size={24}
    />
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "flex": 1,
        "fontFamily": "MontserratBold",
        "fontSize": 24,
        "fontWeight": "bold",
        "textAlign": "center",
      }
    }
  >
    Test Header
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "width": 40,
      }
    }
  />
</View>
`;

exports[`Header Component Snapshots matches snapshot with very long title 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 60,
      "marginBottom": 24,
      "marginTop": 32,
      "paddingHorizontal": 8,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 40,
        "justifyContent": "center",
        "opacity": 1,
        "width": 40,
      }
    }
  >
    <Ionicons
      color="#000"
      name="chevron-back"
      size={24}
    />
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "flex": 1,
        "fontFamily": "MontserratBold",
        "fontSize": 24,
        "fontWeight": "bold",
        "textAlign": "center",
      }
    }
  >
    This is a very long title that should be truncated with ellipsis at the end
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "width": 40,
      }
    }
  />
</View>
`;
